force-app/main/default/objects/BO_Matrix_cnt__c/BO_Matrix_cnt__c.object-meta.xml
<CustomObject>
    <label>BO Matrix Count</label>
    <nameField>
        <displayFormat>BO Matrix-{000}</displayFormat>
        <label>Logistic Oppty Count Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BO Matrix Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>