force-app/main/default/objects/BO_Matrix_cnt__c/fields/From_RHQ__c.field-meta.xml
<CustomField>
    <fullName>From_RHQ__c</fullName>
    <description>출발 권역
From RHQ</description>
    <label>From RHQ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>EUROPE/CIS</fullName>
            </value>
            <value>
                <fullName>LATIN AMERICA</fullName>
            </value>
            <value>
                <fullName>MEIA</fullName>
            </value>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>PACIFIC</fullName>
            </value>
            <value>
                <fullName>CHINA_TO_SUM</fullName>
            </value>
            <value>
                <fullName>KOREA_TO_SUM</fullName>
            </value>
            <value>
                <fullName>EUROPE_TO_SUM</fullName>
            </value>
            <value>
                <fullName>LATIN_AMERICA_TO_SUM</fullName>
            </value>
            <value>
                <fullName>MEIA_TO_SUM</fullName>
            </value>
            <value>
                <fullName>NORTH_AMERICA_TO_SUM</fullName>
            </value>
            <value>
                <fullName>PACIFIC_TO_SUM</fullName>
            </value>
            <value>
                <fullName>TOTAL_FROM_TO_SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>