force-app/main/default/objects/BO_Matrix_cnt__c/fields/Related_Report__c.field-meta.xml
<CustomField>
    <fullName>Related_Report__c</fullName>
    <label>Related Report</label>
    <type>Url</type>
</CustomField>