force-app/main/default/objects/BO_Matrix_cnt__c/fields/To_RHQ__c.field-meta.xml
<CustomField>
    <fullName>To_RHQ__c</fullName>
    <description>도착 권역
To RHQ</description>
    <label>To RHQ</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>KOREA</fullName>
            </value>
            <value>
                <fullName>EUROPE/CIS</fullName>
            </value>
            <value>
                <fullName>LATIN AMERICA</fullName>
            </value>
            <value>
                <fullName>MEIA</fullName>
            </value>
            <value>
                <fullName>NORTH AMERICA</fullName>
            </value>
            <value>
                <fullName>PACIFIC</fullName>
            </value>
            <value>
                <fullName>CHINA_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>KOREA_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>EUROPE_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>LATIN_AMERICA_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>MEIA_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>NORTH_AMERICA_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>PACIFIC_FROM_SUM</fullName>
            </value>
            <value>
                <fullName>TOTAL_FROM_TO_SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>