force-app/main/default/objects/BO_Matrix_cnt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>From_RHQ__c</columns>
    <columns>To_RHQ__c</columns>
    <columns>Related_Report__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>